implement user profile, edit and delet functionality and tests
